[package]
name = "whatever"
version = "0.1.0"
authors = ["Matt <3 <not.mattowen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.7"
rand = "0.7.3"
tokio = {version="0.2", features=["full"]}
warp = "0.2"
