[package]
name = "whatever"
version = "0.1.0"
authors = ["Matt <3 <not.mattowen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.7"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version="0.2", features=["full"]}
warp = "0.2"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "sample"
path = "src/sample.rs"
