[package]
name = "bullet-hell"
version = "0.2.0"
authors = ["Matt <3 <not.mattowen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
futures = "0.3.7"
rand = "0.7.3"
tokio = {version="0.2", features=["full"]}
warp = "0.2"

[[bin]]
name = "bullet-hell"
path = "src/server.rs"
